--- a/HW2-5.html
+++ b/HW2-5.html
@@ -12,8 +12,8 @@
     <div class="mx-4 md:flex md:flex-col md:items-center">
       <h1 class="text-black font-bold text-3xl">Pricing Plans</h1>
       <p class="text-gray-400 text-md py-4">Start building for free, then add a site plan to go live. Account plans unlock additional features.</p>
-      <div class="bg-gray-300 p-0.5 shadow mt-4 mb-12">
-        <button class="py-2 px-4 shadow-md bg-white">Monthly billing</button>
+      <div class="bg-gray-300 p-0.5 shadow mt-4 mb-12 rounded-md w-fit">
+        <button class="py-2 px-4 shadow-md  rounded-md bg-white">Monthly billing</button>
         <button class="py-2 px-4">Yearly billing</button>
       </div>
     </div> 
