--- a/apple.com/apple.html
+++ b/apple.com/apple.html
@@ -30,7 +30,8 @@
     <title>apple</title>
 </head>
 <body>
-    <header class="bg-gray-900 bf-opacity-90 w-full fixed z-50">
+    <!-- Navigation -->
+    <nav class="bg-gray-900 bf-opacity-90 w-full fixed z-50">
         <ul class="text-gray-200 text-xs font-extralight hidden md:flex md:justify-evenly md:items-center md:m-auto max-w-7xl">
             <li><a href="#"><img src="./images/apple-logo-white.png" class="w-6 py-2"></a></li>
             <li><a href="#" class="hover:text-white">Store</a></li>
@@ -46,14 +47,15 @@
             <li><a href="#"><img src="./images/looking-into.png" class="w-4"></a></li>
             <li><a href="#"><img src="./images/handbag.png" class="w-4"></a></li>
         </ul>
-    </header>
-    <header class="bg-gray-900 bf-opacity-90 w-full fixed z-50">
+    </nav>
+    <nav class="bg-gray-900 bf-opacity-90 w-full fixed z-50">
         <ul class="flex items-center justify-between mx-4 md:hidden">
             <li><a href="#"><img src="./images/menu.png" class="w-4"></a></li>
             <li><a href="#"><img src="./images/apple-logo-white.png" class="w-6 py-2"></a></li>
             <li><a href="#"><img src="./images/handbag.png" class="w-4"></a></li>
         </ul>
-    </header>
+    </nav>
+    <!-- Donation -->
     <div class="flex items-center justify-center pt-16 pb-4">
         <img src="./images/unicef.jpeg" class="w-32 mr-3">
         <a href="#" class="flex items-center justify-center text-blue-500">
@@ -129,7 +131,7 @@
             </div>
         </div>
         <!-- Other Products -->
-        <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:grid-rows-3 md:mx-2 my-4">
+        <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:mx-2 my-4">
             <!-- MacBook Pro 13 -->
             <div class="flex flex-col items-center bg-black">
                 <div>
@@ -209,7 +211,7 @@
                     <h3 class="text-center text-xl font-light my-3">
                         Get 3 months free when you buy an Apple Watch.
                     </h3>
-                    <div class="my-4 flex justify-center">
+                    <div class="my-4 flex flex-col items-center lg:flex-row lg:justify-center">
                         <a href="#" class="text-blue-500 text-lg flex items-center mr-6 hover:underline">
                             Learn more
                             <img src="./images/arrow-right.png" class="w-6">
